manifests/k8s/wordpress/k8s-wp-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-db
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: mysql
        ver: 1.0.0
    spec:
      containers:
      - name: wb-db
        image: adziavitski/wp-db:latest
        resources:
          limits:
            cpu: 300m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
