manifests/k8s/wordpress/k8s-wp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: itsawordpress.mooo.com
  labels:
    app: wordpress
  name: ingress-wordpress
spec:
  rules:
  - host: itsawordpress.mooo.com
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port: 
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer:
    ingress:
    - ip: 10.132.0.11
    - ip: 10.132.0.12
    - ip: 10.132.0.7
